--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <div class="navbar navbar-expand-lg navbar-fixed-top navbar-light" >
     
       <a class="navbar-brand bg-greygreen text-white" style="width:250px; height: 70px;text-align: center; vertical-align: middle; padding-top:10px; padding-bottom:-20px; font-family: 'Georgia', Times, 'Times New Roman', serif; font-size: 35px;" href="#">Kai Zhang</a>
-      <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarsExample07XL" aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarsThis" aria-controls="navbarsThis" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right" style="float:right;margin-left:400px;">
+      <div class="navbar-collapse collapse" id="navbarsThis">
+         <ul class="nav navbar-nav navbar-right" style="float:right;margin-left:55%;">
           <li class="nav-item">
             <a class="nav-link text-grey" href="index.html">About <span class="sr-only">(current)</span></a>
           </li>
