--- a/portfolio.html
+++ b/portfolio.html
@@ -55,19 +55,19 @@
             <div class="row">
               <div class="col-md-4">
                 <a href="https://zkdtc.github.io/passowrd_generator/">
-                  <img src="http://placehold.it/200x200" style="width:100%;" alt="kz" class="img-thumbnail">
+                  <img src="assets/images/password.png" style="width:100%;" alt="kz" class="img-thumbnail">
                 </a>
                 <p class="portfolio-image-text">Password Generator </p>
               </div>
               <div class="col-md-4">
                 <a href="https://zkdtc.github.io/code_quiz/">
-                  <img src="http://placehold.it/200x200" style="width:100%;" alt="kz" class="img-thumbnail">
+                  <img src="assets/images/code.png" style="width:100%;" alt="kz" class="img-thumbnail">
                 </a>
                 <p class="portfolio-image-text">Code Quiz </p>
               </div>
               <div class="col-md-4">
                 <a href="https://zkdtc.github.io/day_schedular/">
-                  <img src="http://placehold.it/200x200" style="width:100%;" alt="kz" class="img-thumbnail">
+                  <img src="assets/images/day_planner.png" style="width:100%;" alt="kz" class="img-thumbnail">
                 </a>
                 <p class="portfolio-image-text">Day Planner</p>
               </div>
@@ -75,13 +75,13 @@
             <div class="row">
               <div class="col-md-4">
                 <a href="https://zkdtc.github.io/weather_dashboard/">
-                  <img src="http://placehold.it/200x200" style="width:100%;" alt="kz" class="img-thumbnail">
+                  <img src="assets/images/weather.png" style="width:100%;" alt="kz" class="img-thumbnail">
                 </a>
                 <p class="portfolio-image-text">Weather Dashboard </p>
               </div>
               <div class="col-md-4">
                 <a href="https://zkdtc.github.io/Eater/">
-                  <img src="http://placehold.it/200x200" style="width:100%;" alt="kz" class="img-thumbnail">
+                  <img src="assets/images/eater.png" style="width:100%;" alt="kz" class="img-thumbnail">
                 </a>
                 <p class="portfolio-image-text">Eater</p>
               </div>
